# data-hunt

./: .gitignore  AGENTS.md  Dockerfile  config.py  data.csv  dependencies.py  gunicorn_conf.py  main.py  models.py  pyproject.toml  security.py  server.py  tasks.py  utils.py
alembic/: env.py
alembic/versions/: 08d100e525a4_add_projectdict_model.py  0aa3e6ff904e_add_is_scam_to_address_history.py  0c7577e990f6_create_account_token_table.py  12325e4b50cd_remove_price_from_token_dict.py  63ad7bf5477d_add_balance_to_account.py  75503c3455a8_add_address_to_address_history_pk.py  89d2f4d7273f_add_addresshistory_model.py  8cefafaad1c0_add_network_to_account_address.py  a33f38303a6d_add_cexdict_model.py  a8b4138aa30d_initial_tables.py  cda4d87b498b_add_debank_request_table.py  f68fa403085f_add_tokendict_model.py  f8ee65f87beb_add_token_price_history_and_prices_.py
docs/: all_history_list.json  debank_chain_list.json
k8s/: deployment.yaml  ingress.yaml  service.yaml
routers/: auth.py  chains.py  cmc.py  coinbase.py  csv.py  debank.py  debt.py  health.py  history.py  hyperliquid.py  lighter.py  paradex.py  pool.py  protocols.py  solana.py  stability.py  wallet.py
tests/: test_coinbase.py  test_solana.py
